# HaRe

./: .ghci  .gitignore  .travis.yml  ChangeLog  GHC-NOTES  HaRe.cabal  LAYOUT.md  LICENSE  NOTES  README  README.markdown  README.md  Setup.hs  TODO  TODO.org  buildall.sh  cabal.config  cabal.project  configure.sh  makefile  mkdeps.sh  otherResults.hs  stack-7.10.3.yaml  stack-8.0.1.yaml  stack-8.0.2.yaml  stack-8.2.0.yaml  stack-travis.yaml  stack.yaml  test  testResult.hs
StrategyLib-4.0-beta/: COPYING  ChangeLog  Makefile  README
app/: .ghci  MainHaRe.hs
old/: README
test/testdata/: AddParams1.hs  AddParams2.hs  B.hs  BCpp.hs  BCppTC.hs  Exports.hs  LocToName.hs  Offset.hs  RmDecl3.hs  RmDecl4.hs  TokenTest.hs  testdata.cabal
test/testdata/AddOneParameter/: A1.expected.hs  A1.hs  A2.expected.hs  A2.hs  A3.expected.hs  A3.hs  C1.expected.hs  C1.hs  C2.expected.hs  C2.hs  D1.expected.hs  D1.hs  D2.expected.hs  D2.hs  D3.expected.hs  D3.hs  FunIn1.expected.hs  FunIn1.hs  FunIn2.expected.hs  FunIn2.hs  FunIn3.expected.hs  FunIn3.hs  FunIn4.expected.hs  FunIn4.hs  FunIn5.hs  FunIn6.expected.hs  FunIn6.hs  MultiFun1.expected.hs  MultiFun1.hs  Nested.expected.hs  Nested.hs  PatIn1.expected.hs  PatIn1.hs  PatIn2.hs
test/testdata/Case/: B.hs.expected  B.hs.expected.dd  BSimple.hs  BSimple.hs.expected  BSimpleExpected.hs  C.hs.expected  CExpected.hs  D.hs.expected  E.hs.expected  F.hs  F.hs.expected  FExpected.hs  Foo.hs  Foo.hs.expected
test/testdata/DeleteDef/: Dd1.hs  Dd1.hs.expected  Dd1Client.hs  Dd2.hs  Dd2Client.hs  Dd3.hs  UTS1.hs  UTS1.hs.expected
test/testdata/Demote/: CaseIn1.hs  CaseIn1.hs.expected  D1.hs.expected  D2.hs.expected  D2a.hs  D2a.hs.expected  LetIn1.hs  LetIn1.hs.expected  MultiLeg2.hs.expected  PatBindIn1.hs.expected  UsedAtLevel.expected.hs  UsedAtLevel.hs  UsedAtLevel2.expected.hs  WhereIn1.hs.expected  WhereIn2.hs  WhereIn3.hs  WhereIn3.hs.expected  WhereIn4.hs  WhereIn4.hs.expected  WhereIn4.hs.refactored  WhereIn5.hs  WhereIn5.hs.expected  WhereIn6.hs.expected  WhereIn6.hs.refactored  WhereIn7.hs  WhereIn7.hs.expected
test/testdata/DupDef/: Dd1.hs  Dd1.hs.expected  Dd1.hs.expected.dd  Dd1.hs.expected.gg  Dd1.hs.expected.ll  Dd1.hs.expected.mm  Dd1.hs.expected.nn  Dd1.hs.refactored  Dd2.hs  Dd2.hs.expected  Dd3.hs.expected
test/testdata/FreeAndDeclared/: Binders.hs  Declare.hs  Declare2.hs
test/testdata/GenApplicative/: GA1.hs  GA1.hs.expected  GA1expect.hs  GA2.hs  GA2.hs.expected  GA3.hs  GA3.hs.expected  GA4.hs  HTMLTokenizer.hs  HTMLTokenizer.hs.expected
test/testdata/IntroduceTypeSyn/: TS1.hs  TS1.hs.expected  TS2.hs  TS2.hs.expected
test/testdata/Layout/: Arrow.hs  PArr.hs  PatBind.hs
test/testdata/LiftOneLevel/: C1.hs  C1.hs.expected  CaseIn1.hs.expected  D1.hs  D1.hs.expected  D2.hs.expected  D3.hs.expected  LetIn1.hs.expected  LetIn1.hs.refactored  LetIn2.hs.expected  LetIn3.hs.expected  LetIn3.hs.refactored  PatBindIn3.hs.expected  WhereIn1.hs.expected  WhereIn6.hs  WhereIn6.hs.expected  WhereIn7.hs.expected  WhereIn8.hs.expected
test/testdata/LiftToToplevel/: C1.hs  C1.hs.expected  CaseIn1.hs.expected  Collapse1.expected.hs  Collapse1.hs  D1.hs  D1.hs.expected  D2.hs.expected  D3.hs  D3.hs.expected  LetIn1.hs.expected  LetIn2.hs.expected  LetIn3.hs.expected  LetIn3.hs.tokens  LiftInLambda.expected.hs  LiftInLambda.hs  NoWhere.expected.hs  PatBindIn1.hs.expected  PatBindIn2.hs  PatBindIn3.hs.expected  PatBindIn4.hs  Signature.expected.hs  Signature.hs  Signature2.expected.hs  Signature2.hs  Signature3.expected.hs  WhereIn1.hs  WhereIn1.hs.expected  WhereIn6.hs  WhereIn6.hs.expected  WhereIn7.hs.expected  Zmapq.expected.hs
test/testdata/MaybeToMonadPlus/: MMP1.hs  MMP1.hs.expected  MMP2.hs  MMP2.hs.expected1  MMP2.hs.expected2  MMP3.hs  MMP3.hs.expected
test/testdata/MoveDef/: Demote.hs  Demote.hs.expected  Md1.hs  Md1.hs.expected  Md1a.hs  Md1b.hs  MultiFunBind1.hs  PatBind1.hs
test/testdata/Renaming/: A1.hs.expected  A4.hs.expected  A5.hs.expected  B1.hs  B1.hs.expected  B2.hs.expected  B3.hs.expected  B4.hs.expected  B5.hs.expected  C1.hs.expected  C2.hs.expected  C3.hs.expected  C4.hs.expected  C5.hs.expected  C7.hs.expected  ClassIn1.hs.expected  ClassIn2.hs.expected  Constructor.expected.hs  Constructor.hs  ConstructorIn1.hs.expected  ConstructorIn2.hs.expected  ConstructorIn3.hs  ConstructorIn3.hs.expected  D1.hs  D1.hs.expected  D2.hs.expected  D3.hs  D3.hs.expected  D4.hs  D4.hs.expected  D5.hs.expected  D7.hs.expected  ExportedType.expected.hs  ExportedType.expected2.hs  ExportedType.hs  ExportedTypeClient.expected.hs  ExportedTypeClient.expected2.hs  ExportedTypeClient.hs  Field1.hs  Field1.hs.expected  (+20 more)
test/testdata/RmOneParameter/: A1.expected.hs  A1.hs  A2.expected.hs  A2.hs  D1.expected.hs  D1.hs  D2.expected.hs  D2.hs  FunIn0.expected.hs  FunIn0.hs  FunIn1.expected.hs  FunIn1.hs  FunIn2.expected.hs  FunIn2.hs  FunIn2a.expected.hs  FunIn2a.hs  FunIn3.expected.hs  FunIn3.hs  FunIn4.expected.hs  FunIn5.expected.hs  FunIn5.hs  FunIn6.expected.hs  FunIn6.hs  FunIn7.hs  MultiFun1.expected.hs  MultiFun1.hs  SubFun1.expected.hs  SubFun1.hs  SubFun2.expected.hs  SubFun2.hs  SubFun3.expected.hs  SubFun3.hs
test/testdata/Simple/: A.hs  A.hs.expected
test/testdata/SwapArgs/: B.hs
test/testdata/SwapTuple/: St1.hs  St1.hs.expected  St1Ref.hs  main.hs
test/testdata/TypeUtils/: Qualified.hs  Simplest.hs  TypeSigs.hs  VisiblePNs.hs
test/testdata/UnwrapTypeSyn/: UTS1.hs  UTS1.hs.expected  UTS2.hs  UTS2.hs.expected  UTS3.hs  UTS3.hs.expected  UTS4.hs  UTS4.hs.expected
test/testdata/cabal/cabal1/: cabal1.cabal
test/testdata/cabal/cabal1/src/: main.hs.refactored
test/testdata/cabal/cabal2/: cabal2.cabal
test/testdata/cabal/cabal2/src/: main2.hs.refactored
test/testdata/cabal/cabal3/: cabal3.cabal
test/testdata/cabal/cabal4/: cabal4.cabal
test/testdata/cabal/cabal4/src/: main4.expected.hs  main4.hs
test/testdata/cabal/cabal4/src/Foo/: Bar.expected.hs
test/testdata/cabal/foo/: foo.cabal  stack.yaml
test/testdata/cabal/foo/src/: Main.expected.hs
test/testdata/cabal/foo/src/Foo/: Bar.expected.hs
(+1426 files in other folders)
